assets/css/styles.css
:root {
    --main-color: #0893C8;
    --complimentary-color: #FF8500;
    --dark-color: #17181A;
    --gray-color: #343434;
    --light-color: #f5f5f5;
    --white-color: #fff;
}

body {
    overflow-x: hidden;
}

section {
    min-height: 100vh;
    width: 100vw;
}

section:nth-child(even) {
    background: var(--white-color);
}

section:nth-child(odd) {
    background: var(--light-color);
}

section:not(:first-child) {
    /* Offset for navbar */
    padding-top: 59px;
}


/* HOME */
#home {
    background: var(--gray-color);
    background-image: url(../images/footer_lodyas.png);
    color: var(--white-color);
    animation: animatedBackground 30s ease-in-out infinite alternate;
}

@keyframes animatedBackground {
	from { background-position: 0% 0%; }
	to { background-position: 500% 0%; }
}

/* VIEW WORK BUTTON */
#btn-view-work {
    background: none;
    border: 3px solid var(--white-color);
    color: var(--white-color);
    transition: all 0.3s ease-in-out;
}

#btn-view-work:hover {
    background: var(--complimentary-color);
    border: 3px solid var(--complimentary-color);
}

#btn-view-work i {
    transition: all 0.3s ease-in-out;
}

#btn-view-work:hover i{
    transform-origin: center;
    transform: rotate(90deg);
}

/* NAVBAR */
nav {
    background-color: #17181A !important;
    z-index: 2;
}
.navbar {
    border-bottom: 4px solid var(--main-color);
    position: sticky;
    top: 0px;
}

.navbar-dark .navbar-nav .nav-item .nav-link {
    transition: all 0.3s ease-in-out;
    color: var(--white-color)
}

.navbar-dark .navbar-nav .nav-item.active .nav-link {
    color: var(--complimentary-color);
}

.navbar-dark .navbar-nav .nav-item .nav-link:hover {
    color: var(--complimentary-color);
}

/* ABOUT */
#profile-img {
    max-width: 15em;
}

/* PROGRESS BARS */
.progress {
    background: #ddd !important;
    height: 2em;
}

.progress-bar {
    background: var(--main-color) !important;
}

/* PORTFOLIO */
.card, .card-img {
    border: none;
    border-radius: 0;
}
.card-img-overlay {
    opacity: 0;
}
.project .card-img, .project .card-img-overlay {
    transition: all 0.5s ease-in-out;
}

.project:hover .card-img {
    opacity: 0;
}

.project:hover .card-img-overlay {
    opacity: 1;
}

.btn-learn-more {
    background: inherit;
    border: 3px solid var(--complimentary-color);
    transition: all 0.3s ease-in-out;
}

.btn-learn-more:hover {
    background: var(--complimentary-color);
    color: var(--white-color);
}

/* FOOTER */
footer {
    background: var(--gray-color);
    color: var(--white-color);
}

#footer-links i {
    background: var(--dark-color);
    transition: all 0.2s ease-in-out;
}

#footer-links i:hover {
    background: var(--main-color);
}

#footer-links a {
    color: var(--white-color);
    text-decoration: none;
}

#copyright a {
    color: var(--main-color);
}


/* GENERAL CLASSES */
.px-0 {
    padding-right: 0;
    padding-left: 0;
}

.text-main {
    color: var(--main-color);
}

